made some revisions to the HTML and CSS

--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@ Liquorice apple pie gummies cake. Marzipan cotton candy I love halvah I love. Ca
         <div id="bottomlogo">
         <img src = "img/lab a/van-pic.png">
         <h4>Vanessa Stevenson</h4>
-        <p>Foodie</p>
+        <p>Food enthusiast, photography fan. Add a pinch of rw foodism and that's pretty much who I am. </p>
     </div>
-    <button>share recipie</button>
+    <button>SHARE RECIPE</button>
     </article>
 </body>
 
 <footer>
     <img src = "img/lab a/small-logo.png">
-    <p> Delicious &copy; 5050 all rights reserved </p>
-    <p id="copy">proudly written by a ghost</p>
+    <p> Delicious &copy; 2020 * All Rights Reserved. </p>
+    <p id="copy">Proudly published with Ghost</p>
 </footer>
 
 </html>
